Update 조건에 맞는 도서 리스트 출력하기.md

--- a/Programmer/Lv1/조건에 맞는 도서 리스트 출력하기.md
+++ b/Programmer/Lv1/조건에 맞는 도서 리스트 출력하기.md
@@ -1,6 +1,7 @@
+# 문제1. 조건에 맞는 도서 리스트 출력하기 
 [문제 보기](https://school.programmers.co.kr/learn/courses/30/lessons/144853)
 
-
+문제 풀이
 ```mysql
 SELECT BOOK_ID, DATE_FORMAT(PUBLISHED_DATE, '%Y-%m-%d') AS PUBLISHED_DATE
 FROM BOOK
