Update 7. 조건에 맞는 회원수 구하기.md

--- a/Programmers/Lv.1/7. 조건에 맞는 회원수 구하기.md
+++ b/Programmers/Lv.1/7. 조건에 맞는 회원수 구하기.md
@@ -7,5 +7,6 @@ Q. USER_INFO 테이블에서 2021년에 가입한 회원 중 나이가 20세 이
 ```mysql
 SELECT COUNT(*) AS USERS
 FROM USER_INFO 
-WHERE YEAR(JOINED) = 2021 AND AGE BETWEEN 20 AND 29
+WHERE YEAR(JOINED) = 2021 
+  AND AGE BETWEEN 20 AND 29
 ```
