02. 과일로 만든 아이스크림 고르기

--- a/Programmers/Lv.1/02. 과일로 만든 아이스크림 고르기.md
+++ b/Programmers/Lv.1/02. 과일로 만든 아이스크림 고르기.md
@@ -1,9 +1,8 @@
 # 문제2. 과일로 만든 아이스크림 고르기
-[Programmers 문제 보기](https://school.programmers.co.kr/learn/courses/30/lessons/133025)
 
 Q. 상반기 아이스크림 총주문량이 3,000보다 높으면서 아이스크림의 주 성분이 과일인 아이스크림의 맛을 총주문량이 큰 순서대로 조회하는 SQL 문을 작성해주세요.
 
-문제 풀이
+🔑 문제 풀이
 ```mysql
 SELECT FIRST_HALF.FLAVOR
 FROM FIRST_HALF 
@@ -12,3 +11,5 @@ ON FIRST_HALF.FLAVOR = ICECREAM_INFO.FLAVOR
 WHERE TOTAL_ORDER > 3000 AND INGREDIENT_TYPE LIKE 'fruit_based'
 ORDER BY TOTAL_ORDER DESC
 ```
+
+출처: [Programmers 문제 보기](https://school.programmers.co.kr/learn/courses/30/lessons/133025)
