04. 흉부외과 또는 일반외과 의사 목록 출력하기

--- a/Programmers/Lv.1/04. 흉부외과 또는 일반외과 의사 목록 출력하기.md
+++ b/Programmers/Lv.1/04. 흉부외과 또는 일반외과 의사 목록 출력하기.md
@@ -10,4 +10,4 @@ WHERE MCDP_CD LIKE 'CS' OR MCDP_CD LIKE 'GS'
 ORDER BY HIRE_YMD DESC, DR_NAME
 ```
 
-[Programmers 문제 보기](https://school.programmers.co.kr/learn/courses/30/lessons/132203)
+출처: [Programmers 문제 보기](https://school.programmers.co.kr/learn/courses/30/lessons/132203)
