--- a/Programmers/Lv.2/08. 중성화 여부 파악하기.md
+++ b/Programmers/Lv.2/08. 중성화 여부 파악하기.md
@@ -9,4 +9,15 @@ FROM ANIMAL_INS
 ORDER BY ANIMAL_ID
 ```
 
+```mysql
+SELECT ANIMAL_ID, NAME, 
+    CASE 
+        WHEN SEX_UPON_INTAKE LIKE 'Neutered%' or SEX_UPON_INTAKE LIKE'Spayed%'
+        THEN 'O'
+        ELSE 'X'    
+    END AS '중성화'
+FROM ANIMAL_INS
+ORDER BY ANIMAL_ID
+```
+
 출처: [Programmers 문제 보기](https://school.programmers.co.kr/learn/courses/30/lessons/59409)
