12. 가격이 제일 비싼 식품의 정보 출력하기

--- a/Programmers/Lv.2/12. 가격이 제일 비싼 식품의 정보 출력하기.md
+++ b/Programmers/Lv.2/12. 가격이 제일 비싼 식품의 정보 출력하기.md
@@ -9,4 +9,9 @@ FROM FOOD_PRODUCT
 WHERE PRICE IN (SELECT MAX(PRICE) FROM FOOD_PRODUCT)
 ```
 
+```mysql
+SELECT *
+FROM FOOD_PRODUCT
+WHERE PRICE = (SELECT MAX(PRICE) FROM FOOD_PRODUCT)
+```
 출처: [Programmers 문제 보기](https://school.programmers.co.kr/learn/courses/30/lessons/131115)
