14. 카테고리 별 상품 개수 구하기

--- a/Programmers/Lv.2/14. 카테고리 별 상품 개수 구하기.md
+++ b/Programmers/Lv.2/14. 카테고리 별 상품 개수 구하기.md
@@ -32,5 +32,7 @@ ORDER BY CATEGORY
 
 #### 💡 SUBSTRING_INDEX() 함수: 문자열의 일부를 추출하는 함수로써 구분자와 구분자 숫자만큼 잘라내어 반환
      - SUBSTRING_INDEX(문자열, 구분자, 구분자 Index)
-        - ex. SELECT SUBSTRING_INDEX('010-1234-5678', '-', 2) > 010-5678
-        - ex. SELECT SUBSTRING_INDEX('www.google.com', '.', 2) > www.google
+        ex. SELECT SUBSTRING_INDEX('010-1234-5678', '-', 2) 
+          > 010-5678
+        ex. SELECT SUBSTRING_INDEX('www.google.com', '.', 2) 
+          > www.google
