--- a/Programmers/Lv.2/13. 3월에 태어난 여성 회원 목록 출력하기.md
+++ b/Programmers/Lv.2/13. 3월에 태어난 여성 회원 목록 출력하기.md
@@ -1,6 +1,7 @@
 # 문제13. 3월에 태어난 여성 회원 목록 출력하기
 
-Q. MEMBER_PROFILE 테이블에서 생일이 3월인 여성 회원의 ID, 이름, 성별, 생년월일을 조회하는 SQL문을 작성해주세요. 이때 전화번호가 NULL인 경우는 출력대상에서 제외시켜 주시고, 결과는 회원ID를 기준으로 오름차순 정렬해주세요.
+Q. MEMBER_PROFILE 테이블에서 생일이 3월인 여성 회원의 ID, 이름, 성별, 생년월일을 조회하는 SQL문을 작성해주세요.<br>
+이때 전화번호가 NULL인 경우는 출력대상에서 제외시켜 주시고, 결과는 회원ID를 기준으로 오름차순 정렬해주세요.
 
 🔑 문제 풀이
 ```mysql
