14. 카테고리 별 상품 개수 구하기

--- a/Programmers/Lv.2/14. 카테고리 별 상품 개수 구하기.md
+++ b/Programmers/Lv.2/14. 카테고리 별 상품 개수 구하기.md
@@ -1,6 +1,7 @@
 # 문제14. 카테고리 별 상품 개수 구하기
 
-Q. PRODUCT 테이블에서 상품 카테고리 코드(PRODUCT_CODE 앞 2자리) 별 상품 개수를 출력하는 SQL문을 작성해주세요. 결과는 상품 카테고리 코드를 기준으로 오름차순 정렬해주세요.
+Q. PRODUCT 테이블에서 상품 카테고리 코드(PRODUCT_CODE 앞 2자리) 별 상품 개수를 출력하는 SQL문을 작성해주세요. <br>
+결과는 상품 카테고리 코드를 기준으로 오름차순 정렬해주세요.
 
 🔑 문제 풀이
 ```mysql
