15. 가격대 별 상품 개수 구하기

--- a/Programmers/Lv.2/15. 가격대 별 상품 개수 구하기.md
+++ b/Programmers/Lv.2/15. 가격대 별 상품 개수 구하기.md
@@ -18,5 +18,5 @@ ORDER BY PRICE_GROUP
 #### 💡 TRUNCATE() 함수: 버림을 위한 함수. ROUND() 함수와 다르게 버림 할 자리수를 반드시 명시해야 함  
      - TRUNCATE(숫자, 버림 할 자릿수)
      
-#### 💡 ROUND() 함수: 반올림을 위한 함수. 
+#### 💡 ROUND() 함수: 반올림을 위한 함수
      - ROUND(숫자, 반올림 할 자릿수)
