--- a/Programmers/Lv.2/17. 재구매가 일어난 상품과 회원 리스트 구하기.md
+++ b/Programmers/Lv.2/17. 재구매가 일어난 상품과 회원 리스트 구하기.md
@@ -1,6 +1,6 @@
 # 문제17. 재구매가 일어난 상품과 회원 리스트 구하기
 
-Q. ONLINE_SALE 테이블에서 동일한 회원이 동일한 상품을 재구매한 데이터를 구하여, 재구매한 회원 ID와 재구매한 상품 ID를 출력하는 SQL문을 작성해주세요. <br>
+Q. ONLINE_SALE 테이블에서 동일한 회원이 동일한 상품을 재구매한 데이터를 구하여, 재구매한 회원 ID와 재구매한 상품 ID를 출력하는 SQL문을 작성해주세요.
 결과는 회원 ID를 기준으로 오름차순 정렬해주시고 회원 ID가 같다면 상품 ID를 기준으로 내림차순 정렬해주세요.
 
 🔑 문제 풀이
