16. 상품 별 오프라인 매출 구하기

--- a/Programmers/Lv.2/16. 상품 별 오프라인 매출 구하기.md
+++ b/Programmers/Lv.2/16. 상품 별 오프라인 매출 구하기.md
@@ -13,4 +13,12 @@ GROUP BY PRODUCT_CODE
 ORDER BY SALES DESC, PRODUCT_CODE
 ```
 
+```mysql
+SELECT P.PRODUCT_CODE, SUM(P.PRICE * O.SALES_AMOUNT) AS SALES
+FROM PRODUCT P 
+JOIN OFFLINE_SALE O
+ON P.PRODUCT_ID = O.PRODUCT_ID
+GROUP BY P.PRODUCT_CODE
+ORDER BY SALES DESC, P.PRODUCT_CODE
+```
 출처: [Programmers 문제 보기](https://school.programmers.co.kr/learn/courses/30/lessons/131533)
