18. 진료과별 총 예약 횟수 출력하기

--- a/Programmers/Lv.2/18. 진료과별 총 예약 횟수 출력하기.md
+++ b/Programmers/Lv.2/18. 진료과별 총 예약 횟수 출력하기.md
@@ -12,4 +12,12 @@ GROUP BY MCDP_CD
 ORDER BY COUNT(MCDP_CD), MCDP_CD
 ```
 
+```mysql
+SELECT MCDP_CD AS 진료과코드, COUNT(DATE_FORMAT(APNT_YMD, '%Y-%m-%d')) AS 5월예약건수
+FROM APPOINTMENT 
+WHERE MONTH(APNT_YMD) = 05
+GROUP BY 진료과코드
+ORDER BY COUNT(MCDP_CD), MCDP_CD
+```
+
 출처: [Programmers 문제 보기](https://school.programmers.co.kr/learn/courses/30/lessons/132202)
