18. 진료과별 총 예약 횟수 출력하기

--- a/Programmers/Lv.2/18. 진료과별 총 예약 횟수 출력하기.md
+++ b/Programmers/Lv.2/18. 진료과별 총 예약 횟수 출력하기.md
@@ -20,4 +20,12 @@ GROUP BY 진료과코드
 ORDER BY 5월예약건수, 진료과코드
 ```
 
+```mysql
+SELECT MCDP_CD AS 진료과코드, COUNT(MCDP_CD) AS 5월예약건수
+FROM APPOINTMENT
+WHERE APNT_YMD LIKE '2022-05%'
+GROUP BY 진료과코드
+ORDER BY 5월예약건수 ASC, 진료과코드 ASC
+```
+
 출처: [Programmers 문제 보기](https://school.programmers.co.kr/learn/courses/30/lessons/132202)
