--- a/Programmers/Lv.2/19. 성분으로 구분한 아이스크림 총 주문량.md
+++ b/Programmers/Lv.2/19. 성분으로 구분한 아이스크림 총 주문량.md
@@ -14,8 +14,7 @@ ORDER BY TOTAL_ORDER
 
 ```mysql
 SELECT I.INGREDIENT_TYPE, SUM(F.TOTAL_ORDER) AS TOTAL_ORDER
-FROM FIRST_HALF F
-JOIN ICECREAM_INFO I
+FROM FIRST_HALF F JOIN ICECREAM_INFO I
 ON F.FLAVOR = I.FLAVOR
 GROUP BY I.INGREDIENT_TYPE
 ORDER BY F.TOTAL_ORDER
