04. 오랜 기간 보호한 동물(2)

--- a/Programmers/Lv.3/04. 오랜 기간 보호한 동물(2).md
+++ b/Programmers/Lv.3/04. 오랜 기간 보호한 동물(2).md
@@ -13,4 +13,13 @@ ORDER BY (OUTS.DATETIME - INS.DATETIME) DESC
 LIMIT 2
 ```
 
+```mysql
+SELECT i.ANIMAL_ID, i.NAME
+FROM ANIMAL_INS i LEFT JOIN ANIMAL_OUTS o
+ON i.ANIMAL_ID = o.ANIMAL_ID
+WHERE o.ANIMAL_ID IS NOT NULL
+ORDER BY DATEDIFF(o.DATETIME, i.DATETIME) DESC
+LIMIT 2
+```
+
 출처: [Programmers 문제 보기](https://school.programmers.co.kr/learn/courses/30/lessons/59411)
