04. 식품분류별 가장 비싼 식품의 정보 조회하기

--- a/Programmers/Lv.4/04. 식품분류별 가장 비싼 식품의 정보 조회하기.md
+++ b/Programmers/Lv.4/04. 식품분류별 가장 비싼 식품의 정보 조회하기.md
@@ -13,4 +13,21 @@ GROUP BY CATEGORY
 ORDER BY PRICE DESC
 ```
 
+```mysql
+SELECT CART_ID
+FROM CART_PRODUCTS
+WHERE NAME IN ('Milk', 'Yogurt')
+GROUP BY CART_ID
+HAVING COUNT(DISTINCT NAME) = 2
+ORDER BY CART_ID
+```
+
+```mysql
+SELECT P1.CART_ID 
+FROM CART_PRODUCTS P1 JOIN CART_PRODUCTS P2
+ON P1.CART_ID = P2.CART_ID
+WHERE P1.NAME = 'Milk' AND P2.NAME = 'Yogurt'
+ORDER BY P1.CART_ID
+```
+
 출처: [Programmers 문제 보기](https://school.programmers.co.kr/learn/courses/30/lessons/131116)
