04. 식품분류별 가장 비싼 식품의 정보 조회하기

--- a/Programmers/Lv.4/04. 식품분류별 가장 비싼 식품의 정보 조회하기.md
+++ b/Programmers/Lv.4/04. 식품분류별 가장 비싼 식품의 정보 조회하기.md
@@ -1,4 +1,4 @@
-# 문제 3. 우유와 요거트가 담긴 장바구니
+# 문제 4. 식품분류별 가장 비싼 식품의 정보 조회하기
 
 Q. FOOD_PRODUCT 테이블에서 식품분류별로 가격이 제일 비싼 식품의 분류, 가격, 이름을 조회하는 SQL문을 작성해주세요. <br>
 이때 식품분류가 '과자', '국', '김치', '식용유'인 경우만 출력시켜 주시고 결과는 식품 가격을 기준으로 내림차순 정렬해주세요.
@@ -11,23 +11,6 @@ WHERE PRICE IN (SELECT MAX(PRICE) FROM FOOD_PRODUCT GROUP BY CATEGORY)
     AND CATEGORY IN ('과자', '국', '김치', '식용유')
 GROUP BY CATEGORY
 ORDER BY PRICE DESC
-```
-
-```mysql
-SELECT CART_ID
-FROM CART_PRODUCTS
-WHERE NAME IN ('Milk', 'Yogurt')
-GROUP BY CART_ID
-HAVING COUNT(DISTINCT NAME) = 2
-ORDER BY CART_ID
-```
-
-```mysql
-SELECT P1.CART_ID 
-FROM CART_PRODUCTS P1 JOIN CART_PRODUCTS P2
-ON P1.CART_ID = P2.CART_ID
-WHERE P1.NAME = 'Milk' AND P2.NAME = 'Yogurt'
-ORDER BY P1.CART_ID
 ```
 
 출처: [Programmers 문제 보기](https://school.programmers.co.kr/learn/courses/30/lessons/131116)
