02. 입양 시각 구하기(2)

--- a/Programmers/Lv.4/02. 입양 시각 구하기(2).md
+++ b/Programmers/Lv.4/02. 입양 시각 구하기(2).md
@@ -47,7 +47,7 @@ ON H1.HOUR = OUTS.HOUR
     - DATETIME에 있는 시간만 테이블이 완성되어 0시부터 23시까지가 아닌 7시부터 19시 까지의 시간만 출력됨 
     - 따라서, 해당 시각에 입양된 기록이 없어도 COUNT 0으로 출력해야 함 (즉, 0시부터 23시까지의 테이블을 먼저 만들어야 함)
     - UNION으로 0시~23시의 모든 시간을 가진 TABLE을생성 후 LEFT JOIN과 IFNULL을 사용하여 문제 해결
-    - SET을 활용하여 필요한 변수가 있을 때 사용자 지정 변수를 선언하여 활용하여 문제 해결 
+    - SET을 활용하여 필요한 변수가 있을 때 사용자 지정 변수를 선언하여 문제 해결 
 
 #### 💡 SET 
     - SET의 경우 어떠한 변수에 특정한 값을 넣어줄 때 사용
