01. 보호소에서 중성화한 동물

--- a/Programmers/Lv.4/01. 보호소에서 중성화한 동물.md
+++ b/Programmers/Lv.4/01. 보호소에서 중성화한 동물.md
@@ -1,7 +1,7 @@
 # 문제 1. 보호소에서 중성화한 동물
 
 Q. 보호소에서 중성화 수술을 거친 동물 정보를 알아보려 합니다. <br>
-보호소에 들어올 당시에는 중성화1되지 않았지만, 보호소를 나갈 당시에는 중성화된 동물의 아이디와 생물 종, 이름을 조회하는 아이디 순으로 조회하는 SQL 문을 작성해주세요.
+보호소에 들어올 당시에는 중성화되지 않았지만, 보호소를 나갈 당시에는 중성화된 동물의 아이디와 생물 종, 이름을 조회하는 아이디 순으로 조회하는 SQL 문을 작성해주세요.
 
 🔑 문제 풀이
 ```mysql
