05. 5월 식품들의 총매출 조회하기

--- a/Programmers/Lv.4/05. 5월 식품들의 총매출 조회하기.md
+++ b/Programmers/Lv.4/05. 5월 식품들의 총매출 조회하기.md
@@ -15,4 +15,13 @@ GROUP BY PRODUCT_ID
 ORDER BY TOTAL_SALES DESC, P.PRODUCT_ID
 ```
 
+```mysql
+SELECT P.PRODUCT_ID, P.PRODUCT_NAME, SUM(P.PRICE*O.AMOUNT) AS TOTAL_SALES
+FROM FOOD_PRODUCT P JOIN FOOD_ORDER O 
+ON P.PRODUCT_ID = O.PRODUCT_ID
+WHERE O.PRODUCE_DATE LIKE '2022-05%'
+GROUP BY PRODUCT_ID
+ORDER BY TOTAL_SALES DESC, P.PRODUCT_ID
+```
+
 출처: [Programmers 문제 보기](https://school.programmers.co.kr/learn/courses/30/lessons/131117)
