--- a/Programmers/Lv.4/06. 서울에 위치한 식당 목록 출력하기.md
+++ b/Programmers/Lv.4/06. 서울에 위치한 식당 목록 출력하기.md
@@ -14,7 +14,12 @@ ORDER BY SCORE DESC, I.FAVORITES DESC
 ```
 
 ```mysql
-SELECT I.REST_ID, I.REST_NAME, I.FOOD_TYPE, I.FAVORITES, I.ADDRESS, ROUND(AVG(R.REVIEW_SCORE),2) AS SCORE
+SELECT I.REST_ID, 
+       I.REST_NAME, 
+       I.FOOD_TYPE, 
+       I.FAVORITES, 
+       I.ADDRESS, 
+       ROUND(AVG(R.REVIEW_SCORE),2) AS SCORE
 FROM REST_INFO I JOIN REST_REVIEW R
 ON I.REST_ID = R.REST_ID
 WHERE I.ADDRESS LIKE '서울%'
