22. 자동차 대여 기록에서 장기단기 대여 구분하기

--- a/Programmers/Lv.1/22. 자동차 대여 기록에서 장기단기 대여 구분하기.md
+++ b/Programmers/Lv.1/22. 자동차 대여 기록에서 장기단기 대여 구분하기.md
@@ -1,6 +1,6 @@
 # 문제 22. 자동차 대여 기록에서 장기/단기 대여 구분하기
 
-Q. CAR_RENTAL_COMPANY_RENTAL_HISTORY 테이블에서 대여 시작일이 2022년 9월에 속하는 대여 기록에 대해서 대여 기간이 30일 이상이면 '장기 대여' 그렇지 않으면 '단기 대여' 로 표시하는 컬럼(컬럼명: RENT_TYPE)을 추가하여 대여기록을 출력하는 SQL문을 작성해주세요. br>
+Q. CAR_RENTAL_COMPANY_RENTAL_HISTORY 테이블에서 대여 시작일이 2022년 9월에 속하는 대여 기록에 대해서 대여 기간이 30일 이상이면 '장기 대여' 그렇지 않으면 '단기 대여' 로 표시하는 컬럼(컬럼명: RENT_TYPE)을 추가하여 대여기록을 출력하는 SQL문을 작성해주세요. <br>
 결과는 대여 기록 ID를 기준으로 내림차순 정렬해주세요.
 
 🔑 문제 풀이
