176. Second Highest Salary

--- a/LeetCode/Medium/176. Second Highest Salary.md
+++ b/LeetCode/Medium/176. Second Highest Salary.md
@@ -5,10 +5,10 @@ If there is no second highest salary, the query should report null.
 
 🔑 문제 풀이
 ```mysql
-SELECT MAX(SALARY) AS SecondHighestSalary 
-FROM EMPLOYEE
-WHERE SALARY NOT IN (SELECT MAX(SALARY)
-                       FROM EMPLOYEE) 
+SELECT MAX(salary) AS SecondHighestSalary 
+FROM Employee
+WHERE salary NOT IN (SELECT MAX(salary)
+                       FROM Employee) 
 ```
 
 출처: [LeetCode 문제 보기](https://leetcode.com/problems/second-highest-salary/)
