--- a/LeetCode/Medium/180. Consecutive Numbers.md
+++ b/LeetCode/Medium/180. Consecutive Numbers.md
@@ -6,7 +6,9 @@ Return the result table in any order.
 
 🔑 문제 풀이
 ```mysql
-
+SELECT DISTINCT L1.num AS ConsecutiveNums
+FROM Logs L1 JOIN Logs L2 ON L1.id = L2.id+1 AND L1.num = L2.num
+             JOIN Logs L3 ON L1.id = L3.id+2 AND L1.num = L3.num
 ```
 
 출처: [LeetCode 문제 보기](https://leetcode.com/problems/consecutive-numbers/)
