--- a/LeetCode/Medium/180. Consecutive Numbers.md
+++ b/LeetCode/Medium/180. Consecutive Numbers.md
@@ -1,7 +1,6 @@
 # 문제 180. Consecutive Numbers
 
-Q. Write an SQL query to find all numbers that appear at least three times consecutively.
-
+Q. Write an SQL query to find all numbers that appear at least three times consecutively. <br>
 Return the result table in any order.
 
 🔑 문제 풀이
