--- a/LeetCode/Medium/178. Rank Scores.md
+++ b/LeetCode/Medium/178. Rank Scores.md
@@ -2,9 +2,10 @@
 
 Q. Write an SQL query to rank the scores. The ranking should be calculated according to the following rules:
 
-The scores should be ranked from the highest to the lowest. <br>
-If there is a tie between two scores, both should have the same ranking. <br>
-After a tie, the next ranking number should be the next consecutive integer value. In other words, there should be no holes between ranks.
+- The scores should be ranked from the highest to the lowest. <br>
+- If there is a tie between two scores, both should have the same ranking. <br>
+- After a tie, the next ranking number should be the next consecutive integer value. In other words, there should be no holes between ranks.
+
 Return the result table ordered by score in descending order.
 
 🔑 문제 풀이
