--- a/LeetCode/Medium/180. Consecutive Numbers.md
+++ b/LeetCode/Medium/180. Consecutive Numbers.md
@@ -10,4 +10,12 @@ FROM Logs L1 JOIN Logs L2 ON L1.id = L2.id+1 AND L1.num = L2.num
              JOIN Logs L3 ON L1.id = L3.id+2 AND L1.num = L3.num
 ```
 
+```mysql
+SELECT DISTINCT L1.num AS ConsecutiveNums
+FROM Logs L1 JOIN Logs L2 ON L1.id = L2.id+1 
+             JOIN Logs L3 ON L1.id = L3.id+2 
+WHERE  L1.num = L2.num 
+   AND L1.num = L3.num
+```
+
 출처: [LeetCode 문제 보기](https://leetcode.com/problems/consecutive-numbers/)
