--- a/LeetCode/Medium/180. Consecutive Numbers.md
+++ b/LeetCode/Medium/180. Consecutive Numbers.md
@@ -4,6 +4,8 @@ Q. Write an SQL query to find all numbers that appear at least three times conse
 Return the result table in any order.
 
 🔑 문제 풀이
+
+#### SELF JOIN으로 풀기 
 ```mysql
 SELECT DISTINCT L1.num AS ConsecutiveNums
 FROM Logs L1 JOIN Logs L2 ON L1.id = L2.id+1 AND L1.num = L2.num
@@ -16,6 +18,28 @@ FROM Logs L1 JOIN Logs L2 ON L1.id = L2.id+1
              JOIN Logs L3 ON L1.id = L3.id+2 
 WHERE L1.num = L2.num 
   AND L1.num = L3.num
+```
+
+#### 윈도우 함수(LEAD) 사용해서 풀기 
+```mysql
+SELECT DISTINCT L.num AS ConsecutiveNums
+FROM (
+SELECT num
+     , LEAD(num, 1) OVER (ORDER BY id) AS next
+     , LEAD(num, 2) OVER (ORDER BY id) as afternext 
+FROM logs) L
+WHERE L.num = L.next AND L.num = L.afternext 
+```
+
+#### 윈도우 함수(LAG) 사용해서 풀기 
+```mysql
+SELECT DISTINCT L.num AS ConsecutiveNums
+FROM (
+SELECT num
+     , LAG(num, 1) OVER (ORDER BY id) AS next
+     , LAG(num, 2) OVER (ORDER BY id) as afternext 
+FROM logs) L
+WHERE L.num = L.next AND L.num = L.afternext 
 ```
 
 출처: [LeetCode 문제 보기](https://leetcode.com/problems/consecutive-numbers/)
