184. Department Highest Salary

--- a/LeetCode/Medium/184. Department Highest Salary.md
+++ b/LeetCode/Medium/184. Department Highest Salary.md
@@ -18,4 +18,16 @@ ON Employee.departmentId = Department.id) ms
 WHERE ms.salary = ms.max_salary
 ```
 
+```mysql
+SELECT Department.name AS Department
+     , Employee.name AS Employee
+     , Salary
+FROM Employee JOIN Department 
+ON Employee.departmentId = Department.id
+WHERE (departmentId, salary) IN 
+                                (SELECT departmentId, MAX(salary)
+                                 FROM Employee
+                                 GROUP BY departmentId)  
+```
+        
 출처: [LeetCode 문제 보기](https://leetcode.com/problems/department-highest-salary/)
