04. Weather Observation Station 9

--- a/HackerRank/Easy/04. Weather Observation Station 9.md
+++ b/HackerRank/Easy/04. Weather Observation Station 9.md
@@ -1,6 +1,6 @@
 # 문제 4. Weather Observation Station 9
 
-Q. Query the list of CITY names from STATION that do not start with vowels.. <br>
+Q. Query the list of CITY names from STATION that do not start with vowels. <br>
 Your result cannot contain duplicates.
 
 🔑 문제 풀이
