185. Department Top Three Salaries

--- a/LeetCode/Medium/185. Department Top Three Salaries.md
+++ b/LeetCode/Medium/185. Department Top Three Salaries.md
@@ -7,6 +7,7 @@ Write an SQL query to find the employees who are high earners in each of the dep
 Return the result table in any order.
 
 🔑 문제 풀이
+#### 윈도우 함수(DENSE_RANK) 사용해서 풀기
 ```mysql
 SELECT Department.Name AS 'Department'
      , e.name AS 'Employee'
@@ -21,4 +22,26 @@ JOIN Department ON e.departmentId = Department.id
 WHERE r <= 3 
 ```
 
+#### SUBQUERY로 풀기
+```mysql
+SELECT d.Name Department
+     , e.Name Employee
+     , e.Salary Salary
+FROM Employee e JOIN Department d 
+ON e.DepartmentId = d.Id
+WHERE e.Salary IN (
+    SELECT * FROM (                  
+        SELECT DISTINCT(Salary) 
+        FROM Employee 
+        WHERE DepartmentId = d.Id 
+        ORDER BY Salary DESC LIMIT 3
+    ) AS _
+)
+```
+
 출처: [LeetCode 문제 보기](https://leetcode.com/problems/department-top-three-salaries/description/)
+
+#### 💡 IN문 뒤에 SELECT * FROM을 넣은 이유 
+- Limit을 이용한 서브쿼리는 해당 MySQL 버전에서는 지원하지 않으므로 Select * FROM 문을 넣어줌으로써 이를 해결 <br>
+<This version of MySQL doesn't yet support 'LIMIT & IN/ALL/ANY/SOME subquery>
+
