185. Department Top Three Salaries

--- a/LeetCode/Medium/185. Department Top Three Salaries.md
+++ b/LeetCode/Medium/185. Department Top Three Salaries.md
@@ -24,17 +24,17 @@ WHERE r <= 3
 
 #### SUBQUERY로 풀기
 ```mysql
-SELECT d.Name Department
-     , e.Name Employee
-     , e.Salary Salary
+SELECT d.name Department
+     , e.name Employee
+     , e.salary Salary
 FROM Employee e JOIN Department d 
-ON e.DepartmentId = d.Id
-WHERE e.Salary IN (
+ON e.departmentId = d.Id
+WHERE e.salary IN (
     SELECT * FROM (                  
-        SELECT DISTINCT(Salary) 
+        SELECT DISTINCT(salary) 
         FROM Employee 
-        WHERE DepartmentId = d.Id 
-        ORDER BY Salary DESC LIMIT 3
+        WHERE departmentId = d.Id 
+        ORDER BY salary DESC LIMIT 3
     ) AS _
 )
 ```
@@ -42,6 +42,6 @@ WHERE e.Salary IN (
 출처: [LeetCode 문제 보기](https://leetcode.com/problems/department-top-three-salaries/description/)
 
 #### 💡 IN문 뒤에 SELECT * FROM을 넣은 이유 
-- Limit을 이용한 서브쿼리는 해당 MySQL 버전에서는 지원하지 않으므로 Select * FROM 문을 넣어줌으로써 이를 해결 <br>
+- LIMIT을 이용한 서브쿼리는 해당 MySQL 버전에서는 지원하지 않으므로 SELECT * FROM 문을 넣어줌으로써 이를 해결 <br>
 <This version of MySQL doesn't yet support 'LIMIT & IN/ALL/ANY/SOME subquery>
 
