--- a/HackerRank/Easy/07. Top Earners.md
+++ b/HackerRank/Easy/07. Top Earners.md
@@ -1,7 +1,6 @@
 # 문제 7. Top Earners
 
-Q. We define an employee's total earnings to be their monthly  worked, and the maximum total earnings to be the maximum total earnings for any employee in the Employee table. <br>
-Write a query to find the maximum total earnings for all employees as well as the total number of employees who have maximum total earnings.<br>
+Q. Write a query to find the maximum total earnings for all employees as well as the total number of employees who have maximum total earnings.<br>
 Then print these values as  space-separated integers.
 
 🔑 문제 풀이
