--- a/LeetCode/Medium/0626. Exchange Seats.md
+++ b/LeetCode/Medium/0626. Exchange Seats.md
@@ -13,4 +13,10 @@ SELECT id
 FROM Seat
 ```
 
+```mysql
+SELECT IF(id < (SELECT MAX(id) FROM seat), IF(id % 2 = 0, id-1, id+1), IF(id % 2 = 0, id-1, id)) AS id, student
+FROM Seat 
+ORDER BY id
+```
+
 출처: [LeetCode 문제 보기](https://leetcode.com/problems/exchange-seats/)
