1179. Reformat Department Table

--- a/LeetCode/Easy/1179. Reformat Department Table.md
+++ b/LeetCode/Easy/1179. Reformat Department Table.md
@@ -22,4 +22,22 @@ FROM Department
 GROUP BY id
 ```
 
+```mysql
+SELECT id 
+    , SUM(CASE WHEN month = 'Jan' THEN revenue ELSE NULL END) AS Jan_Revenue
+    , SUM(CASE WHEN month = 'Feb' THEN revenue ELSE NULL END) AS Feb_Revenue
+    , SUM(CASE WHEN month = 'Mar' THEN revenue ELSE Null END) As Mar_Revenue
+    , SUM(CASE WHEN month = 'Apr' THEN revenue ELSE Null END) As Apr_Revenue
+    , SUM(CASE WHEN month = 'May' THEN revenue ELSE Null END) As May_Revenue
+    , SUM(CASE WHEN month = 'Jun' THEN revenue ELSE Null END) As Jun_Revenue
+    , SUM(CASE WHEN month = 'Jul' THEN revenue ELSE Null END) As Jul_Revenue
+    , SUM(CASE WHEN month = 'Aug' THEN revenue ELSE Null END) As Aug_Revenue
+    , SUM(CASE WHEN month = 'Sep' THEN revenue ELSE Null END) As Sep_Revenue
+    , SUM(CASE WHEN month = 'Oct' THEN revenue ELSE Null END) As Oct_Revenue
+    , SUM(CASE WHEN month = 'Nov' THEN revenue ELSE Null END) As Nov_Revenue
+    , SUM(CASE WHEN month = 'Dec' THEN revenue ELSE Null END) As Dec_Revenue
+FROM department 
+GROUP BY id
+```
+
 출처: [LeetCode 문제 보기](https://leetcode.com/problems/reformat-department-table/description/)
