--- a/LeetCode/Easy/0584. Find Customer Referee.md
+++ b/LeetCode/Easy/0584. Find Customer Referee.md
@@ -1,6 +1,6 @@
 # 문제 584. Find Customer Referee
 
-Q. Write an SQL query to report the names of the customer that are not referred by the customer with id = 2.
+Q. Write an SQL query to report the names of the customer that are not referred by the customer with id = 2. <br>
   Return the result table in any order.
 
 🔑 문제 풀이
