1741. Find Total Time Spent by Each Employee

--- a/LeetCode/Easy/1741. Find Total Time Spent by Each Employee.md
+++ b/LeetCode/Easy/1741. Find Total Time Spent by Each Employee.md
@@ -1,6 +1,6 @@
 # 문제 1741. Find Total Time Spent by Each Employee
 
-Q. Write an SQL query to calculate the total time in minutes spent by each employee on each day at the office. <br.
+Q. Write an SQL query to calculate the total time in minutes spent by each employee on each day at the office. <br>
 Note that within one day, an employee can enter and leave more than once. <br>
 The time spent in the office for a single entry is out_time - in_time. <br>
 Return the result table in any order.
