0570. Managers with at Least 5 Direct Reports

--- a/LeetCode/Medium/0570. Managers with at Least 5 Direct Reports.md
+++ b/LeetCode/Medium/0570. Managers with at Least 5 Direct Reports.md
@@ -1,6 +1,6 @@
 # 문제 570. Managers with at Least 5 Direct Reports
 
-Q. Write an SQL query to report the managers with at least five direct reports. <br.
+Q. Write an SQL query to report the managers with at least five direct reports. <br>
 Return the result table in any order.
 
 🔑 문제 풀이
